# AI-Workflow-Planner

./: README.md  TODO  debug_history.jsonl  test.py
core/: graph.py  test.py  workflow.py
graphyfy/: README.md  app.js  index.html  styles.css
workflow/: README.md  pyproject.toml
workflow/src/workflow/: __init__.py  dashboard.py  workflow.py
workflow/src/workflow/static/: app.js  index.html  styles.css
