[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "workflow"
version = "0.1.0"
description = "Workflow/DAG execution library. Task management and full control over created graphs"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
    { name = "Oskar B" }
]

dependencies = []

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]