[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "workflow"
version = "0.1.0"
description = "A task-graph / workflow orchestration library with a live browser dashboard."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "your-name" }]
dependencies = [] 

[tool.hatch.build.targets.wheel]
packages = ["src/workflow"]

[tool.hatch.build.targets.sdist]
include = [
  "src/workflow",
  "README.md",
  "pyproject.toml",
]
